new proj/src/objects/GE_HQ_NPS__c.object
<CustomObject>
    <description>This object stores NPS values for each account</description>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPS</relationshipLabel>
        <relationshipName>NPS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Business_Tier1__c</fullName>
        <label>Business - Tier 1</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Business_Tier_2__c</fullName>
        <label>Business - Tier 2</label>
        <picklist>
            <picklistValues>
                <fullName>Water ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_NPS__c</fullName>
        <label>NPS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NPS</label>
    <nameField>
        <displayFormat>NPS-{00000}</displayFormat>
        <label>NPS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>